# homechart-openapi-gen

./: Cargo.toml  README.md  clean.sh  generate.sh  generateConfig.json
.openapi-generator/: FILES
docs/: AppCli.md  AppMacro.md  AppMacroFlag.md  AuthAccountApi.md  AuthAccountDelegationApi.md  AuthHouseholdApi.md  AuthOidcClientApi.md  AuthOidcCodeApi.md  AuthSessionApi.md  BookmarkApi.md  BudgetAccountApi.md  BudgetCategoryApi.md  BudgetMonthApi.md  BudgetMonthCategoryApi.md  BudgetPayeeApi.md  BudgetRecurrenceApi.md  BudgetTransactionApi.md  CachesProvider.md  CachesProviderType.md  CalendarEventApi.md  CalendarICalendarApi.md  ChangeApi.md  ConfigApi.md  ConfigApp.md  ConfigCloud.md  ConfigCloudPayments.md  ConfigConfig.md  ConfigKeyApi.md  ConfigWellKnownResponse.md  ControllersResponse.md  CookMealPlanApi.md  CookMealTimeApi.md  CookRecipeApi.md  CryptolibEncryptedValue.md  CryptolibEncryption.md  CryptolibKdf.md  CryptolibKeyCryptolibKeyProviderPrivate.md  CryptolibKeyCryptolibKeyProviderPublic.md  CryptolibKeyCryptolibRsa2048PublicKey.md  DatabasesProvider.md  (+192 more)
scripts/: generate.sh
src/apis/: auth_account_api.rs  auth_account_delegation_api.rs  auth_household_api.rs  auth_oidc_client_api.rs  auth_oidc_code_api.rs  auth_session_api.rs  bookmark_api.rs  budget_account_api.rs  budget_category_api.rs  budget_month_api.rs  budget_month_category_api.rs  budget_payee_api.rs  budget_recurrence_api.rs  budget_transaction_api.rs  calendar_event_api.rs  calendar_i_calendar_api.rs  change_api.rs  config_api.rs  config_key_api.rs  configuration.rs  cook_meal_plan_api.rs  (+21 more)
(+193 files in other folders)
