[package]
name = "homechart-openapi-gen"
version = "2025.12.29+f7c74cd"
authors = ["OpenAPI Generator team and contributors"]
description = "Unofficial generated API for homechart.app"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
async-trait = "^0.1"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "stream"] }
bon = { version = "2.3", optional = true }
[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
bon = ["dep:bon"]
